t2t project finished and better structure.

--- a/QA_Model/RunModel.ipynb
+++ b/QA_Model/RunModel.ipynb
@@ -110,7 +110,7 @@
    "source": [
     "from transformers import pipeline, AutoModelForQuestionAnswering, AutoTokenizer\n",
     "\n",
-    "model_path = \"project_code/model\"\n",
+    "model_path = \"model\"\n",
     "\n",
     "model = AutoModelForQuestionAnswering.from_pretrained(model_path)\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_path)\n",
